feat: users routes and refactor repository
