# app/Http/Controllers/TransactionController.php
@@ -2,7 +2,7 @@
 
 namespace App\Http\Controllers;
 
-use App\Http\Requests\Transaction\StoreRequest;
+use App\Http\Requests\Transaction\TransactionStoreRequest;
 use App\Http\Resources\ResponseResource;
 use App\Services\TransactionService;
 use Illuminate\Http\JsonResponse;
@@ -18,13 +18,13 @@ class TransactionController extends Controller
     /**
      * @OA\Post(
      *  path="/transactions",
-     *  summary="Create new transaction",
-     *  tags={"Transactions"},
+     *  summary="Create new transaction [user_pf]",
+     *  tags={"Transaction"},
      *  security = {{"bearer":{}}},
      *  @OA\RequestBody(
      *     @OA\MediaType(mediaType="application/json", @OA\Schema(ref="#/components/schemas/TransactionStoreRequest")),
      *  ),
-     *  @OA\Response(response="201", description="created", @OA\JsonContent(example={
+     *  @OA\Response(response="200", description="created", @OA\JsonContent(example={
      *      "data": {
      *          "public_id": "7aab891a-48b1-4f9f-b391-9c8567ef5eda",
      *          "amount": 1,
@@ -44,7 +44,7 @@ class TransactionController extends Controller
      *  @OA\Response(response=500, description="error to create transaction")
      * )
      */
-    public function store(StoreRequest $request): JsonResponse
+    public function store(TransactionStoreRequest $request): JsonResponse
     {
         try {
             $transaction = $this->transactionService->handler($request->payeeId, $request->amount)
