# app/Http/Requests/Auth/AuthStoreRequest.php
@@ -11,15 +11,16 @@ use Illuminate\Validation\Rule;
 /**
  * @OA\Schema(
  *  schema="AuthStoreRequest",
- *  required={"name", "email", "documentNumber", "password", "type"},
+ *  required={"name", "email", "documentNumber", "password", "password_confirmation", "type"},
  *  @OA\Property(property="name", type="string", example="User Name Example"),
  *  @OA\Property(property="email", type="email", example="email@example.com"),
- *  @OA\Property(property="documentNumber", type="string", example="11122233344"),
+ *  @OA\Property(property="documentNumber", type="string", example="11122233301"),
  *  @OA\Property(property="password", type="string", example="mypass"),
+ *  @OA\Property(property="password_confirmation", type="string", example="mypass"),
  *  @OA\Property(property="type", type="string", example="pf"),
  * )
  */
-class StoreRequest extends BaseRequest
+class AuthStoreRequest extends BaseRequest
 {
     /**
      * Get the validation rules that apply to the request.
@@ -41,7 +42,7 @@ class StoreRequest extends BaseRequest
                 'document_number:both'
             ],
             'email' => ['required', 'email', 'unique:users,email', 'max:150'],
-            'password' => ['required', 'min:6'],
+            'password' => ['required', 'min:6', 'confirmed'],
             'type' => ['required', Rule::in(TypeEnum::toArray())],
         ];
     }
