# docs/swagger.json
@@ -22,7 +22,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/AuthLoginRequest"
+                                "$ref": "#/components/schemas/AuthAuthLoginRequest"
                             }
                         }
                     }
@@ -44,7 +44,7 @@
                                             "public_id": "20ce8f4a-506b-4ebd-ab10-756494da00de",
                                             "name": "User Name Example",
                                             "email": "email@example.com",
-                                            "document_number": "11122233344",
+                                            "document_number": "11122233301",
                                             "type": "pf",
                                             "updated_at": "2023-07-05T02:44:52.000000Z",
                                             "created_at": "2023-07-05T02:44:52.000000Z",
@@ -88,7 +88,7 @@
                                         "public_id": "20ce8f4a-506b-4ebd-ab10-756494da00de",
                                         "name": "User Name Example",
                                         "email": "email@example.com",
-                                        "document_number": "11122233344",
+                                        "document_number": "11122233301",
                                         "type": "pf",
                                         "updated_at": "2023-07-05T02:44:52.000000Z",
                                         "created_at": "2023-07-05T02:44:52.000000Z",
@@ -110,7 +110,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Logout user from session",
+                "summary": "Logout user from session [user]",
                 "operationId": "1deead8175ec826e4eff4671de92fbf3",
                 "responses": {
                     "200": {
@@ -146,14 +146,14 @@
             }
         },
         "/": {
-            "post": {
+            "get": {
                 "tags": [
-                    "Pages"
+                    "Page"
                 ],
                 "summary": "Home page or index",
-                "operationId": "0b18f58f79c15f03e64f3bb76e959188",
+                "operationId": "baba801330162b9e4c817b315d590995",
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "created",
                         "content": {
                             "application/json": {
@@ -163,7 +163,7 @@
                                         "name": "Users Transactions"
                                     },
                                     "meta": {
-                                        "version": "1"
+                                        "version": 1
                                     }
                                 }
                             }
@@ -175,9 +175,9 @@
         "/transactions": {
             "post": {
                 "tags": [
-                    "Transactions"
+                    "Transaction"
                 ],
-                "summary": "Create new transaction",
+                "summary": "Create new transaction [user_pf]",
                 "operationId": "238affdbe033b73010cbace3ad94520e",
                 "requestBody": {
                     "content": {
@@ -189,7 +189,7 @@
                     }
                 },
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "created",
                         "content": {
                             "application/json": {
@@ -232,12 +232,149 @@
                 ]
             }
         },
+        "/users/{id}": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "User show [admin]",
+                "operationId": "910a0c7cf580e1c605648d82a4e57f46",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "users.id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "data": {
+                                        "id": 1,
+                                        "public_id": "4b0a8cf3-dbb0-43a1-9b99-a90056793ade",
+                                        "name": "User Name",
+                                        "email": "user@mail.com",
+                                        "document_number": "12345678900",
+                                        "type": "pf",
+                                        "created_at": "2023-07-04T05:58:15.000000Z",
+                                        "updated_at": "2023-07-04T06:15:20.000000Z",
+                                        "deleted_at": null
+                                    },
+                                    "meta": {
+                                        "roles": [
+                                            "admin",
+                                            "user"
+                                        ]
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UnauthorizedResponse"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            },
+            "patch": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "User update [admin]",
+                "operationId": "6055962f27a3fb88a3445c27693dcf5f",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "users.id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UserStoreRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "data": {
+                                        "id": 1,
+                                        "public_id": "4b0a8cf3-dbb0-43a1-9b99-a90056793ade",
+                                        "name": "User Name",
+                                        "email": "user@mail.com",
+                                        "document_number": "12345678900",
+                                        "type": "pf",
+                                        "created_at": "2023-07-04T05:58:15.000000Z",
+                                        "updated_at": "2023-07-04T06:15:20.000000Z",
+                                        "deleted_at": null
+                                    },
+                                    "meta": {
+                                        "roles": [
+                                            "admin",
+                                            "user"
+                                        ]
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UnauthorizedResponse"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
         "/me": {
             "get": {
                 "tags": [
-                    "Users"
+                    "User"
                 ],
-                "summary": "Info about authenticated user",
+                "summary": "Info about authenticated user [admin, user]",
                 "operationId": "9174a569ffd5f82da6d1982c9382d3ba",
                 "responses": {
                     "200": {
@@ -285,7 +422,7 @@
     },
     "components": {
         "schemas": {
-            "AuthLoginRequest": {
+            "AuthAuthLoginRequest": {
                 "required": [
                     "documentNumber",
                     "password"
@@ -294,7 +431,7 @@
                     "documentNumber": {
                         "type": "string",
                         "format": "text",
-                        "example": "11122233344"
+                        "example": "11122233301"
                     },
                     "password": {
                         "type": "string",
@@ -310,6 +447,7 @@
                     "email",
                     "documentNumber",
                     "password",
+                    "password_confirmation",
                     "type"
                 ],
                 "properties": {
@@ -323,9 +461,13 @@
                     },
                     "documentNumber": {
                         "type": "string",
-                        "example": "11122233344"
+                        "example": "11122233301"
                     },
                     "password": {
+                        "type": "string",
+                        "example": "mypass"
+                    },
+                    "password_confirmation": {
                         "type": "string",
                         "example": "mypass"
                     },
@@ -351,6 +493,41 @@
                         "type": "numeric",
                         "format": "text",
                         "example": "100"
+                    }
+                },
+                "type": "object"
+            },
+            "UserStoreRequest": {
+                "required": [
+                    "name",
+                    "email",
+                    "roles"
+                ],
+                "properties": {
+                    "name": {
+                        "type": "string",
+                        "example": "User Name Example"
+                    },
+                    "email": {
+                        "type": "email",
+                        "example": "email@example.com"
+                    },
+                    "roles": {
+                        "type": "array",
+                        "items": [],
+                        "example": [
+                            1,
+                            3,
+                            5
+                        ]
+                    },
+                    "password": {
+                        "type": "string",
+                        "example": "mypass"
+                    },
+                    "password_confirmation": {
+                        "type": "string",
+                        "example": "mypass"
                     }
                 },
                 "type": "object"
