# routes/api.php
@@ -12,14 +12,21 @@ use Illuminate\Support\Facades\Route;
 |--------------------------------------------------------------------------
 */
 
-Route::controller(AuthController::class)->name('auth')->group(function() {
-    Route::get('/logout', 'logout')->middleware("permission:".PermissionEnum::AUTH_GET_LOGOUT);
+Route::pattern('id', '[0-9]+');
+//Route::pattern('uuid', '[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}');
+
+Route::controller(AuthController::class)->group(function() {
+    Route::get('/logout', 'logout')->middleware("permission:".PermissionEnum::AUTH_LOGOUT);
 });
 
-Route::controller(UserController::class)->name('users')->group(function() {
-    Route::get('/me', 'me')->middleware("permission:".PermissionEnum::USER_GET_ME);
+Route::controller(UserController::class)->group(function() {
+    Route::get('/me', 'me')->middleware("permission:".PermissionEnum::USER_ME);
+    Route::prefix('users')->group(function() {
+        Route::get('/{id}', 'show')->middleware("permission:".PermissionEnum::USER_SHOW);
+        Route::patch('/{id}', 'update')->middleware("permission:".PermissionEnum::USER_UPDATE);
+    });
 });
 
-Route::controller(TransactionController::class)->prefix('transactions')->name('transactions')->group(function() {
-    Route::post('/', 'store')->middleware("permission:".PermissionEnum::TRANSACTION_POST_STORE);
+Route::controller(TransactionController::class)->prefix('transactions')->group(function() {
+    Route::post('/', 'store')->middleware("permission:".PermissionEnum::TRANSACTION_STORE);
 });
